# cpp-dp-2021-11-08

./: README.md
Behavioral/Chain.TheoryCode/: chain.hpp
Behavioral/Command.Exercise/: CMakeLists.txt  main.cpp
Behavioral/Command.Exercise/gtests/: CMakeLists.txt  main_test.cpp
Behavioral/Strategy.Exercise/: main.cpp
Behavioral/Strategy.TheoryCode/: main.cpp
Creational/AbstractFactory.Exercise/: before.cpp
Creational/Builder.Example/: main.cpp  report_builder.hpp
Creational/Composite.Builder/: composite_builder.cpp
Creational/FactoryMethod.Exercise2/: circle.cpp  circle.hpp  main.cpp  rectangle.cpp
Creational/FactoryMethod.Exercise2/shape_readers_writers/: circle_reader_writer.cpp  circle_reader_writer.hpp  square_reader_writer.cpp
Creational/FactoryMethod.TheoryCode/: factory.hpp  main.cpp
Creational/Prototype.Intro/: main.cpp
Structural/Adapter.Exercise/: text.cpp  text.hpp
Structural/Adapter.Exercise/shape_readers_writers/: text_reader_writer.cpp
Structural/Bridge.Pimpl/: bitmap.cpp  bitmap.hpp
Structural/Composite.Exercise/: main.cpp  shape_group.cpp  shape_group.hpp
Structural/Decorator.Exercise/: main.cpp  starbugs_coffee.hpp
Structural/Decorator.TheoryCode/: main.cpp
Structural/Flyweight.Boost/: main.cpp
extra/BankAccount.SML/: CMakeLists.txt
extra/BankAccount.SML/src/: bank_account.hpp
extra/BankAccount.SML/tests/: CMakeLists.txt  bank_account_tests.cpp
extra/Composite.Builder/: composite_builder.cpp  person.hpp
extra/PolymorphicWrappers/: polymorphic_wrappers.cpp
extra/Polymorphism/: polymorphism.cpp
(+1 files in other folders)
